--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "sass": "^1.49.7"
   },
   "scripts": {
     "start": "cross-env PUBLIC_URL=/ craco start",
